# RetroGameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Doxygen/: Doxyfile  index.html
Editor/: CMakeLists.txt  main.cpp
Editor/include/: Editor.h
Editor/libs/imgui_docking/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
Editor/libs/imgui_docking/backends/: imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp
Editor/libs/imgui_docking/docs/: CHANGELOG.txt  FAQ.md
Editor/libs/imgui_docking/examples/example_sdl2_sdlrenderer2/: example_sdl2_sdlrenderer2
Editor/libs/imgui_docking/examples/libs/glfw/include/GLFW/: glfw3.h
Editor/src/: Editor.cpp
Editor/src/Displays/: DebugDisplay.cpp  DebugDisplay.h  EntityDisplay.cpp  EntityDisplay.h  FileDisplay.cpp  FileDisplay.h  IDisplay.h  LogDisplay.cpp  LogDisplay.h  MainMenuBar.cpp  MainMenuBar.h  MouseDisplay.cpp  MouseDisplay.h  ProjectMenuDisplay.cpp  ProjectMenuDisplay.h  SceneDisplay.cpp  SceneDisplay.h  TestDisplayA.cpp  TestDisplayA.h  TestDisplayB.cpp  TestDisplayB.h
Editor/src/FileSystem/include/: FileDialogs.h  FileHandler.h
Editor/src/FileSystem/src/: FileDialogs.cpp  FileHandler.cpp  NativeFileDialogExt.cpp
Editor/src/Logger/: Logger.cpp  Logger.h  TerminalLogger.cpp  TerminalLogger.h
Editor/src/Logger/src/: Logger.cpp  TerminalLogger.cpp
Editor/src/displays/: DebugDisplay.h  IDisplay.h  LogDisplay.cpp  LogDisplay.h  MainMenuBar.cpp  MainMenuBar.h  SceneDisplay.cpp  SceneDisplay.h  TestDisplayA.cpp  TestDisplayA.h  TestDisplayB.cpp  TestDisplayB.h
Engine/: CMakeLists.txt  Doxyfile
Engine/include/: RGE.h
Engine/src/: RGE.cpp
Engine/src/AssetStore/: AssetStore.cpp  AssetStore.h
Engine/src/AssetStore/include/: AssetStore.h
Engine/src/AssetStore/src/: AssetStore.cpp
Engine/src/Components/: HealthComponent.h  PlayerControlComponent.h  RigidBodyComponent.h  ScriptComponent.h
Engine/src/Components/include/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  FSMComponent.h  HealthComponent.h  PlayerRaycastComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RaycastComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  SpritesheetAnimationComponent.h  SpritesheetComponent.h  TextLabelComponent.h  TransformComponent.h
Engine/src/ECS/: ECS.cpp
Engine/src/ECS/include/: Component.h  ECS.h  Entity.h  Pool.h  Registry.h  System.h
Engine/src/EventBus/: EventBus.h
Engine/src/EventBus/include/: Event.h  EventBus.h
Engine/src/Events/: KeyPressedEvent.h  KeyReleasedEvent.h
Engine/src/Events/include/: CollisionEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h  PlayerInputEvent.h
Engine/src/FSM/: FSM.cpp  StateTransitions.cpp
Engine/src/FSM/include/: BaseState.h  FSM.h  States.h
Engine/src/FileHandler/: FileHandler.cpp
Engine/src/FileHandler/include/: FileHandler.h
Engine/src/GlobalConfig/: GlobalConfig.cpp  GlobalConfig.h
Engine/src/LevelLoader/: LevelLoader.cpp
Engine/src/LevelLoader/include/: LevelLoader.h
Engine/src/Logger/: Logger.cpp  Logger.h
Engine/src/Systems/: AnimationSystem.h  CollisionSystem.h  DamageSystem.h  RenderColliderSystem.h  RenderTextSystem.h  ScriptSystem.h
Engine/src/Systems/include/: AnimationSystem.h  CameraFollowSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  EditorSystem.h  EntityCollisionSystem.h  EntityMovementSystem.h  InputControlSystem.h  KeyPressedReleasedSystem.h  MovementSystem.h  PlayerCollisionSystem.h  PlayerControlSystem.h  PlayerControllerSystem.h  PlayerMovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderHealthBarSystem.h  RenderPlayerRaycastSystem.h  RenderRaycastSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h  SpritesheetAnimationSystem.h
Engine_Test_Game/include/: Game.h
Engine_Test_Game/scripts/: Level1.lua
Engine_Test_Game/src/: Game.cpp
Engine_Test_Game_Platform/: GameConfig.json  README.md
Engine_Test_Game_Platform/scripts/: Level1.lua
Game/include/: Game.h
Game/src/: Game.cpp  Game.h
Game_Editor/: project.rge
Game_Engine/src/: Game.cpp
Game_Library_Test/: CMakeLists.txt  README.md  main.cpp
Game_Test/: main.cpp
RGE/include/: Config.h  Engine.h  Globals.h  RGE.h
RGE/src/: RGE.cpp  RGE.h
RGE/src/AssetStore/: AssetStore.cpp  AssetStore.h
RGE/src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  PlayerControlComponent.h  PlayerControllerComponent.h  PlayerStateMachineComponent.h  ProjectileComponent.h  RaycastComponent.h  RigidBodyComponent.h  SpriteComponent.h  StateMachineComponent.h  TextLabelComponent.h  TransformComponent.h
RGE/src/ECS/: ECS.cpp  ECS.h
RGE/src/ECS/include/: Component.h  ECS.h  Entity.h  Pool.h  Registry.h  System.h
RGE/src/EventBus/: EventBus.h
RGE/src/Events/: CollisionEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h
RGE/src/FSM/: Light.cpp  StateTransitions.cpp  fsm.cpp
RGE/src/FSM/include/: BaseState.h  ConcreteLightState.h  FSM.h  States.h  fsmBaseState.h  fsmStates.h
RGE/src/Game/: Game.cpp  Game.h
RGE/src/LevelLoader/: LevelLoader.cpp  LevelLoader.h
RGE/src/Logger/: Logger.cpp  Logger.h
RGE/src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  MovementSystem.h  PlayerControlSystem.h  PlayerMovementSystem.h  PlayerStateMachineSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderImGuiSystem.h  RenderRaycastSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h  StateMachineSystem.h
Scripts/: Setup-Mac.sh
